# cmake-catch2-lib

./: CMakeLists.txt  fact_test.cpp  main.cpp
libfact/: CMakeLists.txt  fact.cpp
